ds-298: fix expand/collapse side nav

--- a/packages/components/bolt-side-nav/src/side-nav.scss
+++ b/packages/components/bolt-side-nav/src/side-nav.scss
@@ -120,7 +120,7 @@
 
   &:focus {
     outline: var(--bolt-focus-ring);
-    outline-offset: 2px;
+    outline-offset: -4px;
   }
 
   &[aria-current] {
